--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<meta name="author" content="name">
     <meta name="description" content="description here">
 		<meta name="keywords" content="keywords,here">
-		<link href="css/tailwind.min.css" rel="stylesheet"> <!--Replace with your tailwind.css once created-->
+		<!--<link href="css/tailwind.min.css" rel="stylesheet"> &lt;!&ndash;Replace with your tailwind.css once created&ndash;&gt;-->
 		<link href="https://fonts.googleapis.com/css?family=Noto+Sans+JP&display=swap" rel="stylesheet">
 <style>
 body {font-family: 'Noto Sans JP', sans-serif;}
