--- a/index.html
+++ b/index.html
@@ -10,24 +10,25 @@
     <meta name="description" content="description here">
 		<meta name="keywords" content="keywords,here">
 		<!--<link href="css/tailwind.min.css" rel="stylesheet"> &lt;!&ndash;Replace with your tailwind.css once created&ndash;&gt;-->
-		<!--<link href="https://fonts.googleapis.com/css?family=Noto+Sans+JP&display=swap" rel="stylesheet">-->
-<style>
-body {font-family: 'Noto Sans JP', sans-serif;}
-.iframe-container{
-  position: relative;
-  width: 100%;
-  padding-bottom: 56.25%; 
-  height: 0;
-}
-.iframe-container iframe{
-  position: absolute;
-  top:0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-}
+  <link href="https://fonts.googleapis.com/css?family=Noto+Sans+JP&display=swap" rel="stylesheet">
 
-</style>
+  <style>
+    body {font-family: 'Noto Sans JP', sans-serif;}
+    .iframe-container{
+      position: relative;
+      width: 100%;
+      padding-bottom: 56.25%;
+      height: 0;
+    }
+    .iframe-container iframe{
+      position: absolute;
+      top:0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+    }
+    
+  </style>
 </head>
 <body class="bg-gray-200  leading-normal tracking-normal">
 	<nav class="flex items-center justify-between flex-wrap bg-blue-900 p-6 fixed w-full z-10 top-0">
