--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="description" content="description here">
 		<meta name="keywords" content="keywords,here">
 		<!--<link href="css/tailwind.min.css" rel="stylesheet"> &lt;!&ndash;Replace with your tailwind.css once created&ndash;&gt;-->
-  <link href="https://fonts.googleapis.com/css?family=Noto+Sans+JP&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
 
   <style>
     body {font-family: 'Noto Sans JP', sans-serif;}
