--- a/blog.html
+++ b/blog.html
@@ -9,10 +9,12 @@
 		<meta name="author" content="name">
     <meta name="description" content="description here">
 		<meta name="keywords" content="keywords,here">
-		<link href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css" rel="stylesheet">
-		<link href="https://fonts.googleapis.com/css?family=Noto+Sans+JP&display=swap" rel="stylesheet">
-		<link href="https://unpkg.com/tailwindcss/dist/tailwind.min.css" rel="stylesheet"> <!--Replace with your tailwind.css once created-->
-		<style>
+		<link href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css" rel="preload stylesheet" as="style"  onload="this.onload=null;this.rel='stylesheet'">
+		<link href="css/tailwind.min.css" rel="stylesheet"> <!--Replace with your tailwind.css once created-->
+		<link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
+	
+	
+	<style>
 		body {font-family: 'Noto Sans JP', sans-serif;}
 		</style>	
 </head>
@@ -21,7 +23,7 @@
 		<div class="flex items-center flex-shrink-0 text-white mr-6">
 			<a class="text-white no-underline hover:text-white hover:no-underline" href="#">
 				<a href="index.html">	<span class="text-2xl pl-2"><i class="em em-grinning"></i> MoiSuomi</span></a>
-			
+      </a>
 		</div>
 
 		<div class="block lg:hidden">
