--- a/post.html
+++ b/post.html
@@ -9,8 +9,9 @@
 	<meta name="author" content="name">
     <meta name="description" content="description here">
 	<meta name="keywords" content="keywords,here">
-	<link href="https://fonts.googleapis.com/css?family=Noto+Sans+JP&display=swap" rel="stylesheet">
-	<link href="https://unpkg.com/tailwindcss/dist/tailwind.min.css" rel="stylesheet"> <!--Replace with your tailwind.css once created-->
+	<link href="css/tailwind.min.css" rel="stylesheet"> <!--Replace with your tailwind.css once created-->
+	<link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
+
 
 </head>
 <body class="bg-gray-100 Noto Sans JP, sans-serif leading-normal tracking-normal">
