--- a/blog.html
+++ b/blog.html
@@ -9,7 +9,7 @@
 		<meta name="author" content="name">
     <meta name="description" content="description here">
 		<meta name="keywords" content="keywords,here">
-		<link href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css" rel="preload stylesheet" as="style"  onload="this.onload=null;this.rel='stylesheet'">
+		<!--<link href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css" rel="preload stylesheet" as="style"  onload="this.onload=null;this.rel='stylesheet'">-->
 		<link href="css/tailwind.min.css" rel="stylesheet"> <!--Replace with your tailwind.css once created-->
 		<link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
 	
